--- a/contact.html
+++ b/contact.html
@@ -9,21 +9,66 @@
     <!-- Bootstrap -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Rufina|Scheherazade" rel="stylesheet">
+
+    <!-- Style sheet -->
+    <link rel="stylesheet" href="assets/css/style.css" media="screen">
 </head>
 <body>
+    <!-- Header container -->
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="index.html">Willa Jin</a>
+            <a class="navbar-brand" href="index.html" id="name-header">Willa Jin</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
+                <div class="navbar-nav">
                 <a class="nav-item nav-link" href="index.html">About Me</a>
                 <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
                 <a class="nav-item nav-link active" href="contact.html">Contact<span class="sr-only">(current)</span></a>
-              </div>
+                </div>
             </div>
-          </nav>
+            </nav>
+        </div> <!-- End header container div -->
+    
+    <!-- Content container -->
+    <div class="container" id="content-container">
+            <div class="row">
+                <!-- Header -->
+                <div class="col-md-8 offset-md-2">
+                    <h3 class="content-header">Contact</h3>
+                    <hr>
+                        <!-- Form -->
+                        <form>
+                            <!-- Name -->
+                            <div class="form-group">
+                                <label for="exampleFormControlInput1">Name</label>
+                                <input type="text" class="form-control" placeholder="Name">
+                            </div>
+
+                            <!-- Email -->
+                            <div class="form-group">
+                                    <label for="exampleFormControlInput1">Email address</label>
+                                    <input type="email" class="form-control" placeholder="name@example.com">
+                            </div>
+
+                            <!-- Message -->
+                            <div class="form-group">
+                                <label for="exampleFormControlTextarea1">Message</label>
+                                <textarea class="form-control" rows="5" placeholder="Write your message here"></textarea>
+                            </div>
+
+                            <!-- Submit button -->
+                            <div>
+                                <input id="submitbutton" type="submit" name="submit" value="Submit" />
+                            </div>
+                        </form>
+
+                    </div> <!-- End column -->
+                </div> <!--End row -->
+        </div> <!-- End content container div -->
+        
 </body>
 </html>
