added footer; updated styles

--- a/index.html
+++ b/index.html
@@ -1,38 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Willa Jin | About  Me</title>
+    <title>Willa Jin | About Me</title>
 
     <!-- Bootstrap -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Rufina|Scheherazade" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rufina|Scheherazade|Raleway" rel="stylesheet">
 
     <!-- Style sheet -->
     <link rel="stylesheet" href="assets/css/style.css" media="screen">
 </head>
+
 <body>
     <!-- Header container -->
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="index.html" id="name-header">Willa Jin</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="index.html">About Me<span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
-                <a class="nav-item nav-link" href="contact.html">Contact</a>
-              </div>
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link active" href="index.html">About Me<span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+                    <a class="nav-item nav-link" href="contact.html">Contact</a>
+                </div>
             </div>
-          </nav>
-        </div> <!-- End header container div -->
-    
+        </nav>
+    </div> <!-- End header container div -->
+
     <!-- Content container -->
     <div class="container" id="content-container">
         <div class="row">
@@ -43,11 +47,20 @@
                 <!-- Profile image -->
                 <img src="assets/images/profile_image.jpg" class="rounded float-left" alt="Willa Jin" />
                 <!-- Biography -->
-                <p class="content">Based in southern California, Willa currently works as a Data Manager at Johnson & Johnson Medical Devices in Irvine, CA. 
-                    She graduated from the University of Southern California in 2016 with a <em>Bachelor of Science</em> in Biomedical Engineering.</p>
-            
-                </div> <!-- End column -->
-            </div> <!--End row -->
-        </div> <!-- End content container div -->
+                <p class="content">Based in southern California, Willa currently works as a Data Manager at Johnson &
+                    Johnson Medical Devices in Irvine, CA.
+                    She graduated from the University of Southern California in 2016 with a <em>Bachelor of Science</em>
+                    in Biomedical Engineering.</p>
+
+            </div> <!-- End column -->
+        </div>
+        <!--End row -->
+    </div> <!-- End content container div -->
+
+    <!-- Footer -->
+    <footer class="footer">
+        &copy; Copyright
+    </footer>
 </body>
+
 </html>
