updated portfolio image links

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
                     <div class="col-md-4">
                         <div class="text-center">
                             <a href="index.html" target="_blank">
-                                <img src="assets/images/profile_image.jpg" class="rounded" alt="Website Portfolio">
+                                <img src="./assets/images/profile_image.jpg" class="rounded" alt="Website Portfolio">
                                 <div class="portfolio-box-text">Website Portfolio</div>
                             </a>
                         </div>
@@ -60,7 +60,7 @@
                     <div class="col-md-4">
                         <div class="text-center">
                             <a href="https://willajin.github.io/unit-4-game/" target="_blank">
-                                <img src="../../../week_4/homework/unit-4-game/assets/images/yellow_gem.jpg" class="rounded" alt="Crystals Collector Game">
+                                <img src="./assets/images/yellow_gem.jpg" class="rounded" alt="Crystals Collector Game">
                                 <div class="portfolio-box-text">Crystals Collector Game</div>
                             </a>
                         </div>
