added week 5 homework

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,8 +54,16 @@
                                 <div class="portfolio-box-text">Website Portfolio</div>
                             </a>
                         </div>
-
                     </div>
+
+                    <div class="col-md-4">
+                            <div class="text-center">
+                                <a href="https://willajin.github.io/Word-Guess-Game/" target="_blank">
+                                    <img src="assets/images/cat.png" class="rounded" alt="Word Guess Game" style="border: 1px solid black">
+                                    <div class="portfolio-box-text">Word Guess Game</div>
+                                </a>
+                            </div>
+                        </div>
 
                     <div class="col-md-4">
                         <div class="text-center">
@@ -66,27 +74,17 @@
                         </div>
                     </div>
 
-                    <div class="col-md-4">
-                        <div class="text-center">
-                            <a href="">
-                                <img src="assets/images/profile_image.jpg" class="rounded" alt="Website Portfolio">
-                                <div class="portfolio-box-text">Placeholder</div>
-                            </a>
-                        </div>
-                    </div>
-
                 </div> <!-- End first portfolio box row -->
 
                 <!-- Second portfolio box row -->
                 <div class="row portfolio-row">
                     <div class="col-md-4">
                         <div class="text-center">
-                            <a href="">
-                                <img src="assets/images/profile_image.jpg" class="rounded" alt="Website Portfolio">
-                                <div class="portfolio-box-text">Placeholder</div>
+                            <a href="https://willajin.github.io/TriviaGame/" target="_blank">
+                                <img src="assets/images/trivia.png" class="rounded" alt="Trivia Game" style="border: 1px solid black">
+                                <div class="portfolio-box-text">Trivia Game</div>
                             </a>
                         </div>
-
                     </div>
 
                     <div class="col-md-4">
