added homework 6 to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,13 +57,13 @@
                     </div>
 
                     <div class="col-md-4">
-                            <div class="text-center">
-                                <a href="https://willajin.github.io/Word-Guess-Game/" target="_blank">
-                                    <img src="assets/images/cat.png" class="rounded" alt="Word Guess Game" style="border: 1px solid black">
-                                    <div class="portfolio-box-text">Word Guess Game</div>
-                                </a>
-                            </div>
+                        <div class="text-center">
+                            <a href="https://willajin.github.io/Word-Guess-Game/" target="_blank">
+                                <img src="assets/images/cat.png" class="rounded" alt="Word Guess Game" style="border: 1px solid black">
+                                <div class="portfolio-box-text">Word Guess Game</div>
+                            </a>
                         </div>
+                    </div>
 
                     <div class="col-md-4">
                         <div class="text-center">
@@ -89,18 +89,9 @@
 
                     <div class="col-md-4">
                         <div class="text-center">
-                            <a href="">
-                                <img src="assets/images/profile_image.jpg" class="rounded" alt="Website Portfolio">
-                                <div class="portfolio-box-text">Placeholder</div>
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="text-center">
-                            <a href="">
-                                <img src="assets/images/profile_image.jpg" class="rounded" alt="Website Portfolio">
-                                <div class="portfolio-box-text">Placeholder</div>
+                            <a href="https://willajin.github.io/GifTastic/" target="_blank">
+                                <img src="assets/images/harry-potter-logo.png" class="rounded" alt="Giphy Search" style="border: 1px solid black">
+                                <div class="portfolio-box-text">Giphy Search</div>
                             </a>
                         </div>
                     </div>
